--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview"
+    "preview": "astro preview",
+    "fn": "netlify functions:serve"
   },
   "devDependencies": {
-    "@astrojs/preact": "^1.0.2",
-    "@astrojs/sitemap": "^1.0.0",
+    "@astrojs/preact": "^2.2.2",
+    "@astrojs/sitemap": "^2.0.1",
     "@netlify/netlify-marketing-tokens": "^1.1.0",
-    "astro": "^2.0.0"
+    "astro": "^2.0.0",
+    "netlify-cli": "^15.11.0"
   },
   "dependencies": {
     "@netlify/functions": "^1.6.0"
